edit announcement page created

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -129,11 +129,11 @@ body {
 	margin:0 auto;
 }
 
-#newAnnHed {
+#newAnnHed, #editAnnHed {
     margin: 0;
 }
 
-#cancBtnNewAnn {
+#cancBtnNewAnn, #cancBtnEditAnn {
     float: left;
     width: 47%;
     margin-left: 3%;
@@ -144,7 +144,7 @@ body {
     color: #ffffff;
 }
 
-#addBtnNewAnn {
+#addBtnNewAnn, #saveBtnEditAnn {
     float: right;
     width: 47%;
     margin-right: 3%;
@@ -157,4 +157,20 @@ body {
 
 #footerNewAnn {
     background-color: transparent!important;
+}
+
+#deleteBtnEditAnn {
+    width: 94%;
+    background-color: #F70005;
+    color: #ffffff;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+#cancBtnEditAnn {
+    background-color: #9B6712;
+}
+
+#saveBtnEditAnn {
+    background-color: #00A6FF;
 }
